welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:17: error: 'case' expected but integer literal found.
            1 => faireV(Color.YELLOW);
            ^MethodsPicture:17: error: '}' expected but ';' found.
            1 => faireV(Color.YELLOW);
                                     ^MethodsPicture:18: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
            2 => faireV(Color.RED);
            ^MethodsPicture:19: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
            3 => faireV(Color.BLUE);
            ^MethodsPicture:20: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
            4 => faireV(Color.GREEN);
            ^MethodsPicture:36: error: expected class or object definition
  faireMotif()
  ^MethodsPicture:37: error: eof expected but '}' found.
}
^