welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  def faireV(c:Color){
    setCouleurBrosse(c)
    avance()
    avance()
    baisseBrosse();leveBrosse();
    avance()
    avance()
  }
  
  def faireMotif(){
    for (k <- 1 to 3){
      for (j <- 1 to 3){

        for (i <- 1 to 4){
          i match{
            1 => faireV(Color.YELLOW);
            2 => faireV(Color.RED);
            3 => faireV(Color.BLUE);
            4 => faireV(Color.GREEN);
          }
          gauche();
          }

        }
        avance();avance();avance();avance();avance();
        avance();avance();
      }
      gauche()
      avance();avance();avance();avance();avance();
      avance();avance();
      droite()
 	 	}
  }

  faireMotif()
}
